# mcp-security-scan

./: Cargo.toml  README.md
src/: cli.rs  main.rs  mcp_client.rs  mcp_types.rs  scan.rs  storage_file.rs  utils.rs  verify_api.rs
src/llm/: client.rs  mod.rs  session.rs
