[package]
name = "MCP-Security-Scan"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
directories = "6.0.0"
shellexpand = "3.0"
sysinfo = "0.34.2"
console = "0.15"
colored = "3.0.0"
chrono = "0.4.40"
md5 = "0.7.0"
anyhow = "1.0"
async-trait = "0.1.88"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features=["client","transport-sse","transport-child-process"]}